--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 {{time}}
   <br><br><br>
 <H3>Categorize</H3>
-Examples:&nbsp[pride, self-control, work, love, speech, money, knowledge, discipline, alcohol]<br><br>
+Examples:&nbsp[pride, self-control, work, speech, money]<br><br>
   <form method="POST" action "{{url_for('home')}}">
       {{ form.hidden_tag() }}
       {{ form.search(size=20)}}
