--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -1,6 +1,6 @@
 
 <H2>Subscribe</H2>
-Get specific wisdom from Proverbs set to your phone.<br><br>
+Get specific Proverbs sent to your phone.<br><br>
 
 
 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -16,7 +16,7 @@ Get specific wisdom from Proverbs set to your phone.<br><br>
   <form method="POST" action "{{url_for('home')}}">
       {{ form.hidden_tag() }}
       {{ form.phone.label }}<br>
-      {{ form.phone(size=20)}}<br><br>
+      {{ form.phone(size=20)}} (1234567890)<br><br>
       {{ form.carrier.label }}<br>
       {{ form.carrier()}}<br><br>
       {{ form.frequency.label }}<br>
