--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,11 @@
                 <br>
             {% endif %}
         {% endwith %}
+    <form action "{{url_for('home')}}"  method="post">
+        {{form.hidden_tag()}}
+        {{form.phone(placeholder="1234567890")}}
+        <input type="submit" class="button" name="action" id="submit" value="SIGN UP / UPDATE">
+    </form>
   </body>
   </div>
 </html>
