--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,8 @@
         {{form.hidden_tag()}}
         {{form.phone(placeholder="1234567890")}}
         <input type="submit" class="button" name="action" id="submit" value="SIGN UP / UPDATE">
-    </form>
+    </form><br>
+    <p>Proverbs will be sent to your phone based on selected tags and frequency. You can come back anytime to unsubscribe or update preferences.</p>
   </body>
   </div>
 </html>
