--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -18,8 +18,10 @@
         {% endwith %}
     <form action ""  method="post">
         {{form.hidden_tag()}}
-        {{form.frequency()}}
+        {{form.taglist.label}}
         {{form.taglist()}}
+        {{form.frequency.label}}
+        {{form.frequency()}}<br><br>
         <input type="submit" class="button" name="action" id="submit" value="SUBMIT">
         {% if userstatus == "Yes"  %}
             <input type="submit" class="button" name="action" id="submit" value="UNSUBSCRIBE">
