--- a/templates/success.html
+++ b/templates/success.html
@@ -15,7 +15,8 @@
             {% else %}
                 <br>
             {% endif %}
-        {% endwith %}
+        {% endwith %}<br>
+        <a href="{{url_for('home')}}">Return home.</a>
   </body>
   </div>
 </html>
