--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href={{ url_for('static',filename='style.css')}}/>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   </head>
   <div id="page-wrap">
   <body>
@@ -17,7 +17,7 @@
             {% endif %}
         {% endwith %}
     <form action "{{url_for('home')}}"  method="post">
-        {{form.hidden_tag()}}
+        {{ form.hidden_tag() }}
         {{form.confirm_code(placeholder="1234")}}
         <input type="submit" class="button" name="action" id="submit" value="CONFIRM CODE">
     </form>
