--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href={{ url_for('static',filename='style.css')}}/>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   </head>
   <div id="page-wrap">
   <body>
@@ -17,7 +17,7 @@
             {% endif %}
         {% endwith %}
     <form action ""  method="post">
-        {{form.hidden_tag()}}
+        {{ form.hidden_tag() }}
         {{form.taglist.label}}
         {{form.taglist()}}<br>
         {{form.frequency.label}}
