--- a/templates/success.html
+++ b/templates/success.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href={{ url_for('static',filename='style.css')}}/>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   </head>
   <div id="page-wrap">
   <body>
