--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,9 @@
   <head>
     <meta charset="utf-8">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/css/intlTelInput.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/js/intlTelInput.min.js"></script>
+
   </head>
   <div id="page-wrap">
   <body>
@@ -16,12 +19,35 @@
                 <br>
             {% endif %}
         {% endwith %}
+
     <form action "{{url_for('home')}}"  method="post">
-        {{form.hidden_tag()}}
-        {{form.phone.label}}
-        {{form.phone(placeholder="1234567890")}}<br><br>
-        <input type="submit" class="button" name="action" id="submit" value="SIGN UP / UPDATE">
-    </form><br>
+      {{ form.hidden_tag() }}
+      {{ form.phone() }}<br>
+
+      <!-- Thanks to Miguel Grinberg @ twillo -->
+      <script>
+      var wtf_phone_field = document.getElementById('phone');
+      wtf_phone_field.style.position = 'absolute';
+      wtf_phone_field.style.top = '-9999px';
+      wtf_phone_field.style.left = '-9999px';
+      wtf_phone_field.parentElement.insertAdjacentHTML('beforeend', '<div><input type="tel" id="_phone"></div>');
+      var fancy_phone_field = document.getElementById('_phone');
+      var fancy_phone_iti = window.intlTelInput(fancy_phone_field, {
+          separateDialCode: true,
+          utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/js/utils.js",
+      });
+      fancy_phone_iti.setNumber(wtf_phone_field.value);
+      fancy_phone_field.addEventListener('blur', function() {
+          wtf_phone_field.value = fancy_phone_iti.getNumber();
+      });
+      </script>
+
+      <br>
+
+      {{ form.submit }}
+
+    </form>
+
     <p>Proverbs will be sent to your phone based on selected tags and frequency. You can come back anytime to unsubscribe or update preferences.</p>
   </body>
   </div>
